--- a/src/iOS_Lang/en.lproj/Localizable.strings
+++ b/src/iOS_Lang/en.lproj/Localizable.strings
@@ -374,7 +374,7 @@
 "Delete this object" = "Delete this object";
 
 /* No comment provided by engineer. */
-"Delete this program" = "Delete this program";
+"Delete this project" = "Delete this project";
 
 /* No comment provided by engineer. */
 "Delete this Script?" = "Delete this Script?";
@@ -633,9 +633,6 @@
 
 /* No comment provided by engineer. */
 "Go to front" = "Go to front";
-
-/* No comment provided by engineer. */
-"GOOD TO SEE YOU" = "GOOD TO SEE YOU";
 
 /* paint */
 "Green" = "Green";
@@ -1001,7 +998,7 @@
 "Not Connected to a WiFi network, please connect to one or change the settings to download also with mobile data." = "Not Connected to a WiFi network, please connect to one or change the settings to download also with mobile data.";
 
 /* No comment provided by engineer. */
-"Not enough free memory to download this program. Please delete some of your projects" = "Not enough free memory to download this program. Please delete some of your projects";
+"Not enough free memory to download this project. Please delete some of your projects" = "Not enough free memory to download this project. Please delete some of your projects";
 
 /* No comment provided by engineer. */
 "Not enough Memory" = "Not enough Memory";
@@ -1115,7 +1112,7 @@
 "Please enter a text!" = "Please enter a text!";
 
 /* No comment provided by engineer. */
-"Please log in to report this program as inappropriate" = "Please log in to report this program as inappropriate";
+"Please log in to report this project as inappropriate" = "Please log in to report this project as inappropriate";
 
 /* paint */
 "Please pick a tool" = "Please pick a tool";
@@ -1187,7 +1184,7 @@
 "Privacy Settings" = "Privacy Settings";
 
 /* No comment provided by engineer. */
-"Problems occured while Uploading your project" = "Problems occured while Uploading your project";
+"Problems occured while uploading your project" = "Problems occured while uploading your project";
 
 /* No comment provided by engineer. */
 "Project" = "Project";
@@ -1362,12 +1359,6 @@
 
 /* No comment provided by engineer. */
 "Set Arduino PWM~ pin" = "Set Arduino PWM~ pin";
-
-/* No comment provided by engineer. */
-"Set background" = "Set background";
-
-/* No comment provided by engineer. */
-"Set brightness " = "Set brightness ";
 
 /* No comment provided by engineer. */
 "Set color " = "Set color ";
@@ -1628,7 +1619,7 @@
 "Upload Project" = "Upload Project";
 
 /* No comment provided by engineer. */
-"Upload Selected Project" = "Upload Selected Project";
+"Upload selected project" = "Upload selected project";
 
 /* No comment provided by engineer. */
 "Upload successful" = "Upload successful";
@@ -1733,7 +1724,7 @@
 "You are also able to build your own apps, remix existing ones and share them with your friends and other exciting people around the world." = "You are also able to build your own apps, remix existing ones and share them with your friends and other exciting people around the world.";
 
 /* No comment provided by engineer. */
-"You have already downloaded this program!" = "You have already downloaded this program!";
+"You have already downloaded this project!" = "You have already downloaded this project!";
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "Your email seems to be invalid";
