--- a/src/iOS_Lang/pl.lproj/Localizable.strings
+++ b/src/iOS_Lang/pl.lproj/Localizable.strings
@@ -113,18 +113,6 @@
 "Categories" = "Kategorie";
 
 /* No comment provided by engineer. */
-"Change brightness\nby %@\%" = "Change brightness\nby %@\\%";
-
-/* No comment provided by engineer. */
-"Change size by %@\%" = "Change size by %@\\%";
-
-/* No comment provided by engineer. */
-"Change transparency\nby %@\%" = "Change transparency\nby %@\\%";
-
-/* No comment provided by engineer. */
-"Change variable\n%@\nby %@" = "Change variable\n%@\nby %@";
-
-/* No comment provided by engineer. */
 "Change volume by %@" = "Zmień głośność o %@";
 
 /* No comment provided by engineer. */
@@ -251,7 +239,7 @@
 "Delete this object" = "Usunąć ten obiekt";
 
 /* No comment provided by engineer. */
-"Delete this program" = "Usunąć ten program";
+"Delete this project" = "Usunąć ten program";
 
 /* No comment provided by engineer. */
 "Delete this Script?" = "Delete this Script?";
@@ -424,9 +412,6 @@
 /* No comment provided by engineer. */
 "Go to front" = "Na wierzch";
 
-/* No comment provided by engineer. */
-"GOOD TO SEE YOU" = "GOOD TO SEE YOU";
-
 /* paint */
 "Green" = "Zielony (Green)";
 
@@ -596,7 +581,7 @@
 "Move Brick" = "Przenieś blok";
 
 /* Name of the default catrobat program (used as filename!!) */
-"My first program" = "Mój pierwszy program";
+"My first project" = "Mój pierwszy program";
 
 /* Default title of imported photo from camera (taken by camera) */
 "My Image" = "Mój obrazek";
@@ -674,7 +659,7 @@
 "not" = "not";
 
 /* No comment provided by engineer. */
-"Not enough free memory to download this program. Please delete some of your programs" = "Za mało wolnej pamięci, aby pobrać ten program. Proszę usunąć niektóre programy";
+"Not enough free memory to download this project. Please delete some of your programs" = "Za mało wolnej pamięci, aby pobrać ten program. Proszę usunąć niektóre programy";
 
 /* No comment provided by engineer. */
 "Not enough Memory" = "Za mało pamięci";
@@ -797,7 +782,7 @@
 "pos_y" = "pos_y";
 
 /* No comment provided by engineer. */
-"Problems occured while Uploading your program" = "Problems occured while Uploading your program";
+"Problems occured while uploading your project" = "Problems occured while uploading your project";
 
 /* No comment provided by engineer. */
 "Program name" = "Nazwa programu";
@@ -877,9 +862,6 @@
 /* No comment provided by engineer. */
 "Saturday" = "Sobota";
 
-/* Action sheet menu title */
-"Save Screenshot to" = "Zapisz zrzut ekranu do";
-
 /* paint */
 "Save to CameraRoll" = "Zapisz do galerii aparatu";
 
@@ -926,25 +908,10 @@
 "September" = "wrzesień";
 
 /* No comment provided by engineer. */
-"Set background\n%@" = "Zmień tło na\n%@";
-
-/* No comment provided by engineer. */
-"Set brightness to %@\%" = "Set brightness to %@\\%";
+"Set background" = "Zmień tło na";
 
 /* No comment provided by engineer. */
 "Set description" = "Wprowadź opis";
-
-/* No comment provided by engineer. */
-"Set size to %@\%" = "Set size to %@\\%";
-
-/* No comment provided by engineer. */
-"Set transparency\nto %@\%" = "Set transparency\nto %@\\%";
-
-/* No comment provided by engineer. */
-"Set variable\n%@\nto %@" = "Set variable\n%@\nto %@";
-
-/* No comment provided by engineer. */
-"Set volume to %@\%" = "Set volume to %@\\%";
 
 /* No comment provided by engineer. */
 "Set X to %@" = "Ustaw X na %@";
@@ -1100,7 +1067,7 @@
 "Upload Program" = "Upload Program";
 
 /* No comment provided by engineer. */
-"Upload Selected Program" = "Upload Selected Program";
+"Upload selected project" = "Upload selected project";
 
 /* No comment provided by engineer. */
 "Upload successful" = "Wysyłanie zakończone powodzeniem";
@@ -1113,9 +1080,6 @@
 
 /* No comment provided by engineer. */
 "Username is necessary!" = "Username is necessary!";
-
-/* No comment provided by engineer. */
-"v" = "v";
 
 /* No comment provided by engineer. */
 "Variable name:" = "Nazwa zmiennej:";
@@ -1172,7 +1136,7 @@
 "You are also able to build your own apps, edit existing ones and share them with your friends and other exciting people." = "Możesz także budować swoje własne aplikacje, edytować istniejące i dzielić się nimi ze znajomymi i innymi ciekawymi ludźmi.";
 
 /* No comment provided by engineer. */
-"You have already downloaded this program!" = "Ten program już został pobrany!";
+"You have already downloaded this project!" = "Ten program już został pobrany!";
 
 /* paint */
 "zoom" = "Powiększ";
