--- a/src/iOS_Lang/sr.lproj/Localizable.strings
+++ b/src/iOS_Lang/sr.lproj/Localizable.strings
@@ -2,7 +2,7 @@
 "A message with the same name already exists, try again." = "A message with the same name already exists, try again.";
 
 /* No comment provided by engineer. */
-"A program with the same name already exists, try again." = "A program with the same name already exists, try again.";
+"A project with the same name already exists, try again." = "A project with the same name already exists, try again.";
 
 /* No comment provided by engineer. */
 "About Catrobat" = "About Catrobat";
@@ -104,25 +104,13 @@
 "Camera Roll" = "Camera Roll";
 
 /* No comment provided by engineer. */
-"Can't restart program!" = "Can't restart program!";
+"Can't restart project!" = "Can't restart project!";
 
 /* No comment provided by engineer. */
 "Cancel" = "Otkaži";
 
 /* No comment provided by engineer. */
 "Categories" = "Categories";
-
-/* No comment provided by engineer. */
-"Change brightness\nby %@\%" = "Change brightness\nby %@\\%";
-
-/* No comment provided by engineer. */
-"Change size by %@\%" = "Change size by %@\\%";
-
-/* No comment provided by engineer. */
-"Change transparency\nby %@\%" = "Change transparency\nby %@\\%";
-
-/* No comment provided by engineer. */
-"Change variable\n%@\nby %@" = "Change variable\n%@\nby %@";
 
 /* No comment provided by engineer. */
 "Change volume by %@" = "Change volume by %@";
@@ -182,7 +170,7 @@
 "Copy Brick" = "Copy Brick";
 
 /* No comment provided by engineer. */
-"Copy program" = "Copy program";
+"Copy project" = "Copy project";
 
 /* No comment provided by engineer. */
 "Debug mode" = "Debug mode";
@@ -212,10 +200,10 @@
 "Delete Objects" = "Delete Objects";
 
 /* No comment provided by engineer. */
-"Delete Program" = "Delete Program";
+"Delete Project" = "Delete Project";
 
 /* No comment provided by engineer. */
-"Delete Programs" = "Delete Programs";
+"Delete Projects" = "Delete Projects";
 
 /* No comment provided by engineer. */
 "Delete Script" = "Delete Script";
@@ -251,7 +239,7 @@
 "Delete this object" = "Delete this object";
 
 /* No comment provided by engineer. */
-"Delete this program" = "Delete this program";
+"Delete this project" = "Delete this project";
 
 /* No comment provided by engineer. */
 "Delete this Script?" = "Delete this Script?";
@@ -308,10 +296,10 @@
 "Edit Object" = "Edit Object";
 
 /* No comment provided by engineer. */
-"Edit Program" = "Edit Program";
+"Edit Project" = "Edit Project";
 
 /* No comment provided by engineer. */
-"Edit Programs" = "Edit Programs";
+"Edit Projects" = "Edit Projects";
 
 /* Action sheet menu title */
 "Edit Sound" = "Edit Sound";
@@ -346,11 +334,11 @@
 /* Placeholder for add object-name input field */
 "Enter your object name here..." = "Enter your object name here...";
 
-/* Placeholder for program-description input field */
-"Enter your program description here..." = "Enter your program description here...";
+/* Placeholder for project-description input field */
+"Enter your project description here..." = "Enter your project description here...";
 
-/* Placeholder for program-name input field */
-"Enter your program name here..." = "Enter your program name here...";
+/* Placeholder for project-name input field */
+"Enter your project name here..." = "Enter your project name here...";
 
 /* Placeholder for add sound-name input field */
 "Enter your sound name here..." = "Enter your sound name here...";
@@ -374,7 +362,7 @@
 "false" = "false";
 
 /* No comment provided by engineer. */
-"Featured Programs" = "Featured Programs";
+"Featured Projects" = "Featured Projects";
 
 /* No comment provided by engineer. */
 "Feb" = "Feb";
@@ -423,9 +411,6 @@
 
 /* No comment provided by engineer. */
 "Go to front" = "Go to front";
-
-/* No comment provided by engineer. */
-"GOOD TO SEE YOU" = "GOOD TO SEE YOU";
 
 /* paint */
 "Green" = "Green";
@@ -571,7 +556,7 @@
 /* No comment provided by engineer. */
 "Mo" = "Mo";
 
-/* Prefix of default catrobat program object names (except background object) */
+/* Prefix of default catrobat project object names (except background object) */
 "Mole" = "Mole";
 
 /* No comment provided by engineer. */
@@ -595,8 +580,8 @@
 /* No comment provided by engineer. */
 "Move Brick" = "Move Brick";
 
-/* Name of the default catrobat program (used as filename!!) */
-"My first program" = "My first program";
+/* Name of the default catrobat project (used as filename!!) */
+"My first project" = "My first project";
 
 /* Default title of imported photo from camera (taken by camera) */
 "My Image" = "My Image";
@@ -620,7 +605,7 @@
 "New Message" = "New Message";
 
 /* No comment provided by engineer. */
-"New Program" = "New Program";
+"New Project" = "New Project";
 
 /* No comment provided by engineer. */
 "New Text" = "New Text";
@@ -674,7 +659,7 @@
 "not" = "not";
 
 /* No comment provided by engineer. */
-"Not enough free memory to download this program. Please delete some of your programs" = "Not enough free memory to download this program. Please delete some of your programs";
+"Not enough free memory to download this project. Please delete some of your projects" = "Not enough free memory to download this project. Please delete some of your projects";
 
 /* No comment provided by engineer. */
 "Not enough Memory" = "Not enough Memory";
@@ -749,7 +734,7 @@
 "Please register below" = "Please register below";
 
 /* No comment provided by engineer. */
-"Please select a program to upload" = "Please select a program to upload";
+"Please select a project to upload" = "Please select a project to upload";
 
 /* No comment provided by engineer. */
 "Pocket Code" = "Pocket Code";
@@ -797,19 +782,19 @@
 "pos_y" = "pos_y";
 
 /* No comment provided by engineer. */
-"Problems occured while Uploading your program" = "Problems occured while Uploading your program";
+"Problems occured while uploading your project" = "Problems occured while uploading your project";
 
 /* No comment provided by engineer. */
-"Program name" = "Program name";
+"Project name" = "Project name";
 
 /* No comment provided by engineer. */
-"Program Name is necessary!" = "Program Name is necessary!";
+"Project Name is necessary!" = "Project Name is necessary!";
 
 /* No comment provided by engineer. */
-"Program variables:" = "Program variables:";
+"Project variables:" = "Project variables:";
 
 /* No comment provided by engineer. */
-"Programs" = "Programi";
+"Projects" = "Projekti";
 
 /* No comment provided by engineer. */
 "Project" = "Project";
@@ -845,7 +830,7 @@
 "Rename object" = "Rename object";
 
 /* No comment provided by engineer. */
-"Rename Program" = "Rename Program";
+"Rename Project" = "Rename Project";
 
 /* No comment provided by engineer. */
 "Rename sound" = "Rename sound";
@@ -876,9 +861,6 @@
 
 /* No comment provided by engineer. */
 "Saturday" = "Saturday";
-
-/* Action sheet menu title */
-"Save Screenshot to" = "Save Screenshot to";
 
 /* paint */
 "Save to CameraRoll" = "Save to CameraRoll";
@@ -926,25 +908,7 @@
 "September" = "Septembar";
 
 /* No comment provided by engineer. */
-"Set background\n%@" = "Set background\n%@";
-
-/* No comment provided by engineer. */
-"Set brightness to %@\%" = "Set brightness to %@\\%";
-
-/* No comment provided by engineer. */
 "Set description" = "Set description";
-
-/* No comment provided by engineer. */
-"Set size to %@\%" = "Set size to %@\\%";
-
-/* No comment provided by engineer. */
-"Set transparency\nto %@\%" = "Set transparency\nto %@\\%";
-
-/* No comment provided by engineer. */
-"Set variable\n%@\nto %@" = "Set variable\n%@\nto %@";
-
-/* No comment provided by engineer. */
-"Set volume to %@\%" = "Set volume to %@\\%";
 
 /* No comment provided by engineer. */
 "Set X to %@" = "Set X to %@";
@@ -1067,7 +1031,7 @@
 "Turn right %@°" = "Turn right %@°";
 
 /* No comment provided by engineer. */
-"Unable to load program!" = "Unable to load program!";
+"Unable to load project!" = "Unable to load project!";
 
 /* No comment provided by engineer. */
 "Unable to play that sound!\nMaybe this is no valid sound or the file is corrupt." = "Unable to play that sound!\nMaybe this is no valid sound or the file is corrupt.";
@@ -1097,10 +1061,10 @@
 "Upload" = "Uploaduj";
 
 /* No comment provided by engineer. */
-"Upload Program" = "Upload Program";
+"Upload Project" = "Upload Project";
 
 /* No comment provided by engineer. */
-"Upload Selected Program" = "Upload Selected Program";
+"Upload selected project" = "Upload selected project";
 
 /* No comment provided by engineer. */
 "Upload successful" = "Upload successful";
@@ -1113,9 +1077,6 @@
 
 /* No comment provided by engineer. */
 "Username is necessary!" = "Username is necessary!";
-
-/* No comment provided by engineer. */
-"v" = "v";
 
 /* No comment provided by engineer. */
 "Variable name:" = "Variable name:";
@@ -1154,7 +1115,7 @@
 "When I receive\n%@" = "When I receive\n%@";
 
 /* No comment provided by engineer. */
-"When program started" = "When program started";
+"When project started" = "When project started";
 
 /* No comment provided by engineer. */
 "When tapped" = "When tapped";
@@ -1172,7 +1133,7 @@
 "You are also able to build your own apps, edit existing ones and share them with your friends and other exciting people." = "You are also able to build your own apps, edit existing ones and share them with your friends and other exciting people.";
 
 /* No comment provided by engineer. */
-"You have already downloaded this program!" = "You have already downloaded this program!";
+"You have already downloaded this project!" = "You have already downloaded this project!";
 
 /* paint */
 "zoom" = "zoom";
